--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Primera Aplicacion :D</title>
+<title>Segunda Aplicacion -_-</title>
 
 <!--grupo css-->
 <link rel="stylesheet" href="css/app2.min.css"/>
