--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ function MM_swapImage() { //v3.0
   </div>
   <br>
   <center>
-  <img src="imagenes/cartelSS.jpg" width="450" height="300">
+  <img src="imagenes/cartelSS.jpg" width="350" height="300">
   </center>
   <br>
 <div>
@@ -71,31 +71,31 @@ function MM_swapImage() { //v3.0
    </li>
    <li class="ui-first-child ui-last-child">
    <a href="#Pagina4" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
-   <h2> ¿Como se celebra la Semana santa en Atlixco? </h2>
+   <h2>La Semana santa en Atlixco</h2>
    <p>Se muestra informacion de como se celebra la Semana Santa en Atlixco</p>
    </a>
    </li>
    <li class="ui-first-child ui-last-child">
    <a href="#Pagina5" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
-   <h2> ¿Como se celebra la Semana Santa en Iztapalapa? </h2>
+   <h2>La Semana Santa en Iztapalapa </h2>
    <p> Se muestra informacion de como se celebra la Semana Santa en Iztapalapa</p>
    </a>
    </li>
     <li class="ui-first-child ui-last-child">
    <a href="#Pagina6" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
-   <h2>¿Como se celebra la Semana Santa en el Vaticano?</h2>
+   <h2>La Semana Santa en el Vaticano</h2>
    <p>Se muestra informacion de la celebracion de la semana santa en el Vaticano</p>
    </a>
    </li>
    <li class="ui-first-child ui-last-child">
    <a href="#Pagina7" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
-   <h2>¿como se celebra Semana Santa en Jerusalen?</h2>
+   <h2>Semana Santa en Jerusalen</h2>
    <p>Se muestra informacion de la celebracion de la semana santa en Jerusalen?</p>
    </a>
    </li>
        <li class="ui-first-child ui-last-child">
    <a href="#Pagina8" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
-   <h2>¿como se celebra la Semana Santa en España</h2>
+   <h2>La Semana Santa en España</h2>
    <p>Selebracion de la semana santa en España?</p>
    </a>
    </li>
@@ -134,7 +134,7 @@ Durante la Semana Santa, el católico cumple con diversos actos, como: procesion
 
 La Semana Santa está precedida por la Cuaresma que se refiere al tiempo de preparación donde se recuerda los 40 días de Jesucristo en el desierto. Las celebraciones centrales de la Semana Santa son: Jueves Santo, Viernes Santo, Sábado Santo y Domingo de Resurrección.</p>
       <br>
-       <img src="imagenes/semanasanta1.1.jpg" width="300" height="300">
+       <img src="imagenes/semanasanta1.1.jpg" width="250" height="250">
       </div>
    </div>
    </div>
@@ -148,7 +148,7 @@ La Semana Santa está precedida por la Cuaresma que se refiere al tiempo de prep
 En este día, se entrecruzan las dos tradiciones litúrgicas que han dado origen a esta celebración: la alegre, multitudinaria, festiva liturgia de la iglesia madre de la ciudad santa, que se convierte en mimesis, imitación de los que Jesús hizo en Jerusalén, y la austera memoria - anamnesis - de la pasión que marcaba la liturgia de Roma. Liturgia de Jerusalén y de Roma, juntas en nuestra celebración. Con una evocación que no puede dejar de ser actualizada.</p>
 <br> 
  <center>
- <img src="imagenes/semanasanta1.2.jpg" width="150" height="150" >
+ <img src="imagenes/semanasanta1.2.jpg" width="250" height="250" >
  </center>
  <br>
  <br> 
@@ -159,7 +159,7 @@ El Jueves Santo tiene lugar durante la Semana Santa, el jueves anterior al Domin
 </p>
 <br> 
 <center>
-<img src="imagenes/semanasanta1.3.jpg" width="150" height="150">
+<img src="imagenes/semanasanta1.3.jpg" width="250" height="250">
 </center>
 <br>
 <br>
@@ -170,7 +170,7 @@ El Viernes Santo es, fundamentalmente, un día de duelo durante el cual se recue
 </p>
 <br> 
 <center>
-<img src="imagenes/semanasanta1.4.jpg" width="150" height="150">
+<img src="imagenes/semanasanta1.4.jpg" width="250" height="250">
 </center>
 <br>
 <br>
@@ -179,7 +179,7 @@ El Viernes Santo es, fundamentalmente, un día de duelo durante el cual se recue
 </p>
 <br> 
 <center>
-<img src="imagenes/semanasanta1.5.jpeg" width="150" height="150">
+<img src="imagenes/semanasanta1.5.jpeg" width="250" height="250">
 </center>
 <br> 
 <br>
@@ -188,7 +188,7 @@ El Viernes Santo es, fundamentalmente, un día de duelo durante el cual se recue
 </p>
 <br>
 <center>
-<img src="imagenes/semanasanta1.6.jpg" width="150" height="150">
+<img src="imagenes/semanasanta1.6.jpg" width="250" height="250">
 </center>
 </div>
 </div>
@@ -213,7 +213,7 @@ El Viernes Santo es, fundamentalmente, un día de duelo durante el cual se recue
 La Pascua forma parte de la Semana Santa donde en el "Viernes Santo" se celebra la crucifixión de Jesús, y en el "Domingo de Pascua" se celebra la Resurrección y su primera aparición a sus discípulos.<p>
 <br> 
 <center>
-<img src="imagenes/semanasanta2.1.jpg" width="350" height="350">
+<img src="imagenes/semanasanta2.1.jpg" width="250" height="250">
 </center>
 <br>
 <h2> El domingo de Pauscua </h2>
@@ -230,8 +230,8 @@ El término de Pascua remite principalmente a la fiesta de la Resurrección, que
 El huevo también es un símbolo de la Pascua, representa el inicio de la vida. En varios países se regalan huevos de chocolate a los amigos, deseándoles un buen paso hacia una vida feliz.</p>
       <br>
       <center>
-       <img src="imagenes/semanasanta2.2.png" width="150" height="150">
-       <img src="imagenes/semanasanta2.3.jpg" width="150" height="150">
+       <img src="imagenes/semanasanta2.2.png" width="75" height="75">
+       <img src="imagenes/semanasanta2.3.jpg" width="75" height="75">
        </center>
       </div>
    </div>
@@ -261,8 +261,8 @@ En efecto el miercoles de ceniza fue el dia 28 de Febrero y no el 21. La iglesia
 </p>
 <br> 
 <center>
-<img src="imagenes/semanasanta3.1.jpg" width="150" height="150">
-<img src="imagenes/semanasanta3.2.jpg" width="150" height="150">
+<img src="imagenes/semanasanta3.1.jpg" width="75" height="75">
+<img src="imagenes/semanasanta3.2.jpg" width="75" height="75">
 </center>
 
 <div data-role="main" class="ui-content">
@@ -284,7 +284,7 @@ En efecto el miercoles de ceniza fue el dia 28 de Febrero y no el 21. La iglesia
 <br>
       <br>
       <center>
-       <img src="imagenes/semanasanta3.3.jpg" width="350" height="350">
+       <img src="imagenes/semanasanta3.3.jpg" width="250" height="250">
        </center>
       </div>
    </div>
@@ -367,7 +367,7 @@ Agregó que Atlixco cuenta con servicios turísticos, una gran infraestructura h
 <div data-role="page" id="Pagina5" data-add-back-btn="true" data-theme="c">
  <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="c" 
    <center>
-   <h1>Celebracion de la Semana Santa en Iztapalapa</h1>
+   <h1>La Semana Santa en Iztapalapa</h1>
 </div>
    </center>
 <div data-role="content" align="justify">
@@ -422,7 +422,7 @@ Agregó que Atlixco cuenta con servicios turísticos, una gran infraestructura h
 <div data-role="page" id="Pagina6" data-add-back-btn="true" data-theme="a">
  <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="b" 
    <center>
-   <h1>¿Como celebran la Semana Santa en el Vaticano?</h1>
+   <h1>La Semana Santa en el Vaticano</h1>
 </div>
    </center>
 <div data-role="content" align="justify">
